--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
      <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> 
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="shortcut icon" href="imgs/portfolio.png">
+    <link rel="shortcut icon" href="portfolio.png">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/dots.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Javiers Irigoyen Terre | FullStack Web Developer</title>
+    <title>Javier Irigoyen Terre | FullStack Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
